# yapm

./: Cargo.toml  resource_eater.sh  shell.nix  stress_runner.sh  syslog.txt
examples/: err.txt  ferr_1.txt  ferr_2.txt  ferr_3.txt  fout_0.txt  fout_1.txt  fout_2.txt  fout_3.txt  out.txt  test_ipc.sh  test_net.sh  test_one.sh  test_proc.sh
src/: config.rs  main.rs  protocol.rs  threads.rs  utils.rs
src/core/: device.rs  logging.rs  mod.rs  task.rs
src/core/platform/: consts.rs  linux.rs  mod.rs  traits.rs  windows.rs
