[package]
name = "yapm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cgroups-rs = "0.3.4"
circular-buffer = "1.1.0"
clap = {version = "4.5.37", features = ["derive"]}
dashmap = "6.1.0"
futures = "0.3.31"
libseccomp = "0.4.0"
nix = {version = "0.29.0", features = ["acct", "process", "signal", "ptrace", "resource", "fs"]}
prettytable = "0.10.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_toml = "0.0.1"
termcolor = "1.4.1"
thiserror = "2.0.3"
time = {version = "0.3.36", features = ["local-offset"]}
tokio = {version = "1.41.1", features = ["sync", "rt", "io-util", "process", "rt-multi-thread", "net", "fs", "macros", "time"]}
toml = "0.8.22"
windows-sys = "0.59.0"

